geht nix weiter...pausenpush